Checkout Management App/objects/Subscription__c.object
<CustomObject>
    <description>Contains information about the customer&apos;s history and usage of an offering. For example, when the subscription started.</description>
    <fields>
        <fullName>ActivationDate__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AmountDiscountedByCoupon__c</fullName>
        <description>The amount discounted by coupon if discount coupon of type dollar comes with subscription.</description>
        <label>Amount Discounted By Coupon</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <description>Charge per license</description>
        <label>Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CouponDiscountType__c</fullName>
        <description>The type of discount a coupon applies to the subscription.</description>
        <label>Coupon Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dollars</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Lifespan__c</fullName>
        <description>The lifespan of the coupon applied to the subscription.</description>
        <label>Coupon Lifespan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Forever</fullName>
                </value>
                <value>
                    <fullName>Limited Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentBillingReminderSent__c</fullName>
        <formula>IF( ISBLANK(LastBillingReminder__c), false,
/* In short - have we already sent a reminder this period (which could be monthly or annually */
LastBillingReminder__c &gt;= CurrentPeriodBeginsAt__c &amp;&amp; LastBillingReminder__c &lt;= CurrentPeriodEndsAt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Period Billing Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentPeriodBeginsAt__c</fullName>
        <label>Current Period Begins At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentPeriodEndsAt__c</fullName>
        <label>Current Period Ends At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>This field is controlled by the associated customer record. Do not manually edit.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>Date the subscription expires</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of the Checkout Subscription&apos;s plan.</description>
        <formula>TEXT(SubscriptionPlan__r.Frequency__c)</formula>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsChargeVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether VAT Percentage should be charged.</description>
        <label>Charge VAT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastBillingReminder__c</fullName>
        <label>Last Billing Renewal Reminder Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastTrialEndingReminder__c</fullName>
        <label>Last Free Trial Ending Reminder Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LicenseAccountName__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <description>Indicates whether the license is based on the company or the user.</description>
        <formula>IF(License__r.sfLma__Licensed_Seats__c == &apos;-1&apos;, &apos;Company&apos;, &apos;User&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LMA License subscription corresponds to</description>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ListingId__c</fullName>
        <label>Listing Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListingName__c</fullName>
        <label>Listing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfTimesCouponApplies__c</fullName>
        <description>If the coupon has limited life span the no of times the coupon applies to the subscription.</description>
        <label>Number of Times Coupon Applies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfUnits__c</fullName>
        <description>Number of licenses the customer has purchased</description>
        <label>Number Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PackageId__c</fullName>
        <label>Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentDiscountedByCoupon__c</fullName>
        <description>Percent to be discounted from subtotal of the subscription if a discount coupon of type percent comes with the subscription.</description>
        <label>Percent Discounted by Coupon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SendLicenseCountChangedNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendLicenseCountChangedNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendSeatsExceededNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendSeatsExceededNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>PastDue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StripeCustomerId__c</fullName>
        <label>Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StripeSubscriptionIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Subscription Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StripeSubscriptionId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Subscription Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <formula>License__r.sfLma__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Plan</label>
        <referenceTo>SubscriptionPlan__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <description>Total amount for the subscription</description>
        <formula>IF(  TEXT(CouponDiscountType__c) = &apos;percent&apos;,
     (  Charge__c  -  (  Charge__c  *  PercentDiscountedByCoupon__c  )  )  *  NumberOfUnits__c ,
        (Charge__c * (IF(NumberOfUnits__c=0, 1, NumberOfUnits__c) ) - AmountDiscountedByCoupon__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrialEndsAt__c</fullName>
        <label>Trial Ends At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TrialLengthInDays__c</fullName>
        <formula>TrialEndsAt__c - TrialStartedAt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Length In Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialStartedAt__c</fullName>
        <label>Trial Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VATNumber__c</fullName>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VATPercentage__c</fullName>
        <label>VAT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Checkout Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>IsChargeVAT__c</columns>
        <columns>ListingId__c</columns>
        <columns>VATNumber__c</columns>
        <columns>VATPercentage__c</columns>
        <columns>ShippingCountry__c</columns>
        <columns>BillingCountry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUB-{000000}</displayFormat>
        <label>Checkout Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>